style/common.css
/* ... */
.component-index a.multi-combobox:before {
	background-position: 0 32px;
}

.component-index a.placeholder:before {
	background-position: 0 32px;
}

.component-index a.self-healing:before {
	background-position: 0 -352px;
}

.component-index a.breadcrumbs:before {
	background-position: 0 -320px;
}

.component-index a.sorting:before {
	background-position: 0 -383px;
}

.component-index a.tooltip:before {
	content: "l";
	font-size: 68px;
	line-height: 85px;
	text-indent: 8px;
}

.component-index a.zoom:before {
	content: "z";
}

.component-index a.image-crop:before {
	content: "r";
}

/* @end */



/* @end */

/* @group Appendix */

#appendix {
	text-align: center;
	padding-bottom: 40px;
	font-size: 12px;
	padding-top: 20px;
}

#appendix a {
	padding-left: 10px;
	padding-right: 10px;
	display: inline-block;
	text-decoration: none;
}



/* @end */

/* @group Siteheader */



/* @end */

/* @group Logo */

#logo {
	width: 100px;
	box-shadow: 0 2px 5px rgba(0,0,0,0.2);
	width: 46px;
	margin-top: -18px;
}



/* @end */

/* @group Global navigation */

#global-navigation {
	background-color: #2F383F;
	color: #33291A;
	text-align: center;
	line-height: 40px;
	height: 40px;
	display: block;
	position: absolute;
	top: 0;
	right: 0;
	left: 0;
	z-index: 10000;
}

#global-navigation.bumped-top {
	position: fixed;
	right: 0;
	top: 0;
	left: 0;
}

#global-navigation #home {
	position: absolute;
	left: 50%;
	margin-left: -50px;
	width: 100px;
	text-align: center;
	background-color: transparent;
	top: -10px;
	transition: all 0.3s;
}

#global-navigation #home img {
	transition: all 0.3s;
	border: 2px solid white;
}

#global-navigation.bumped-top #home img {
	width: 46px;
	margin-top: -18px;
}

#global-navigation #home.bumped-top {
	position: fixed;
	top: 0;
}

#global-navigation a {
	text-decoration: none;
	display: inline-block;
	float: left;
	width: 50%;
	text-align: center;
	color: rgba(254,255,255,0.73);
}

@media only screen and (max-width: 767px) {

#global-navigation a {
	font-size: 12px;
} }

#global-navigation a:hover {
	background-color: rgba(0,0,0,0.18);
}



/* @end */

/* @end */

/* @group Blockquote */

blockquote {
	color: #3c3c3c;
	text-shadow: white 0 1px 0;
	font-family: Georgia, "Times New Roman", Times, serif;
	font-style: italic;
	border-left: 4px solid silver;
	margin-left: 8px;
	padding-left: 12px;
}



/* @end */

/* @group Inline code */

p code {
	box-shadow: inset 0 1px 6px rgba(0,0,0,0.10);
	border-radius: 4px;
	color: #5e5e5e;
	text-shadow: #eaeaea 0 1px 0;
	display: inline-block;
	padding-left: 8px;
	padding-right: 8px;
	border: 1px solid #d3d3d3;
	line-height: 1.6;
}



/* @end */

/* @group Code preview */

pre {
	background-color: black;
	border: 1px solid #d3d3d3;
	overflow: auto;
	color: #a0a0a0;
	margin-left: -302px;
	border-right-style: none;
	border-left-style: none;
	padding: 30px 60px;
	margin-bottom: 1.5em;
	font: 16px "Courier New", Courier, mono;
}



/* @end */

/* @group Messages */

.message {
	padding: 8px;
	margin-bottom: 20px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.20);
	display: block;
	border-radius: 4px
}

.message *:last-child {
	margin-bottom: 0;
}

.message.notice {
	background-color: #fdfdc8;
	color: #6f5a44;
	border: 1px solid #d3d4a7;
	padding: 9px;
}

.message.success {
  background-color: #5bb75b;
  color: #ffffff;
}
.message.success:hover {
  background-color: #347834;
  color: #ffffff;
}

.message.warning {
  background-color: #faa732;
  color: #ffffff;
}
.message.warning:hover {
  background-color: #c17305;
  color: #ffffff;
}

.message.warning * {
	color: white !important;
}

.message.error {
  background-color: #da4f49;
  color: #ffffff;
}

.message.error:hover {
  background-color: #9d2520;
  color: #ffffff;
}

.message.error * {
	color: white !important;
}

.message.info {
  background-color: #d9edf7;
  color: #247fad;
}

.message.info:hover {
  background-color: #85c5e5;
}

/* @group Form messages */

.concise .message {
	width: 100%;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
	padding: 0;
}

.comprehensive .message {
	width: 100%;
}

.concise .message.warning {
	background-color: transparent;
	color: #ff8100;
}

/* @end */

/* @group Self healings */

#selfhealing-messages {
  position: fixed;
  top: 15px;
  width: 320px;
  z-index: 10;
	left: 15px;
}

#selfhealing-messages div {
 	background-color: rgba(0,0,0,0.8);
  	-moz-border-radius: 5px; /* Firefox */
  	-webkit-border-radius: 5px;
  	border-radius: 5px; /* CSS3 */
	border: 1px solid gray;
	-webkit-box-shadow: 0 2px 20px rgba(0,0,0,0.4);
	-moz-box-shadow: 0 2px 20px rgba(0,0,0,0.4);
	box-shadow: 0 2px 20px rgba(0,0,0,0.4);
	margin-bottom: 10px;
	padding: 10px;
}

#selfhealing-messages div {
	color: #cccccc;
	padding: 7px;
}

#selfhealing-messages div p {
	margin: 0;
}
/* @end */



/* @end */

/* @group Injection */

.injection-loading {
	opacity: 0;
}



/* @end */

/* @group Typography */

ul,ol,p,dl {
	margin-top: 0;
	margin-bottom: 1.5em;
}

h1,h2,h3,h4,h5,h6 {
	margin-top: 0;
	font-weight: normal;
	font-style: normal;
}

body>section>h1 {
	font-size: 5em;
	border-top: 1px solid #353f2e;
	padding: 85px 8px 4px 312px;
	text-transform: uppercase;
	letter-spacing: 10px;
	line-height: 1em;
	font-weight: normal;
	font-style: normal;
	margin: 0 -8px;
}

section.documentation h2,
section.demo h2:first-child,
section.description h2 {
	margin-bottom: 1em;
	line-height: 1.3;
	font-weight: bold;
	border-bottom: 1px solid #ddd;
	font-size: 1.2em;
	margin-left: -8px;
	margin-right: -8px;
	padding: 0 8px .3em;
}

h3 {
	margin-top: 0;
	font-size: 1.2em;
	line-height: 1.4;
}

h4 {
	margin-bottom: .8em;
	font-size: 1.3em;
	line-height: 1.6;
	padding-right: 8px;
	padding-left: 8px;
}

h5 {
	margin-bottom: 1em;
	padding-left: 8px;
	padding-right: 8px;	
	font-size: 1.2em;
	line-height: 1.6;
}



/* @end */

/* @group Horizontal rule */

hr {
	border:none;
	border-bottom:1px solid silver;
	margin: 2em auto;
	width: 85%;
}
/* ... */

